force-app/main/default/objects/KimbleOne__DeliveryGroup__c/KimbleOne__DeliveryGroup__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Delivery Engagement</label>
    <nameField>
        <label>Engagement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Engagements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>