force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__BaselineExpensesContractCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BaselineExpensesContractCost__c</fullName>
    <label>Baseline Expenses Contract Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>