force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__BaselineExpensesContractMargin__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BaselineExpensesContractMargin__c</fullName>
    <formula>IF ( NOT( ISBLANK(KimbleOne__BaselineExpensesContractRevenue__c) || KimbleOne__BaselineExpensesContractRevenue__c = 0 ),
( KimbleOne__BaselineExpensesContractRevenue__c - KimbleOne__BaselineExpensesContractCost__c ) / KimbleOne__BaselineExpensesContractRevenue__c, NULL )</formula>
    <label>Baseline Expenses Contract Margin Pct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>