force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__BaselineExpensesContractMarginAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BaselineExpensesContractMarginAmount__c</fullName>
    <formula>IF ( NOT(ISBLANK(KimbleOne__BaselineExpensesContractRevenue__c)  || ISBLANK(KimbleOne__BaselineExpensesContractCost__c)),KimbleOne__BaselineExpensesContractRevenue__c - KimbleOne__BaselineExpensesContractCost__c, NULL )</formula>
    <label>Baseline Expenses Contract Margin Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>