force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__BaselineServicesContractCost__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BaselineServicesContractCost__c</fullName>
    <label>Baseline Services Contract Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>