force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__BaselineServicesContractMargin__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BaselineServicesContractMargin__c</fullName>
    <formula>IF ( NOT( ISBLANK(KimbleOne__BaselineServicesContractRevenue__c) || KimbleOne__BaselineServicesContractRevenue__c = 0 ),
( KimbleOne__BaselineServicesContractRevenue__c - KimbleOne__BaselineServicesContractCost__c ) / KimbleOne__BaselineServicesContractRevenue__c, NULL )</formula>
    <label>Baseline Services Contract Margin Pct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>