force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__BillingAccount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BillingAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Delivery Engagements (BillingAccount)</relationshipLabel>
    <relationshipName>DeliveryGroupsBillingContact</relationshipName>
    <type>Lookup</type>
</CustomField>