force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__BillingContact__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__BillingContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Delivery Engagements</relationshipLabel>
    <relationshipName>DeliveryGroups</relationshipName>
    <type>Lookup</type>
</CustomField>