force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__ContractMargin__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ContractMargin__c</fullName>
    <formula>IF ( NOT( ISBLANK(KimbleOne__ContractCost__c)  || ISBLANK(KimbleOne__ContractRevenue__c)  || KimbleOne__ContractRevenue__c = 0 ), ( KimbleOne__ContractRevenue__c  -  KimbleOne__ContractCost__c )  /  KimbleOne__ContractRevenue__c,  NULL )</formula>
    <label>Contract Margin Pct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>