force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__CustomerDeliveryGroupStatusSummary__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__CustomerDeliveryGroupStatusSummary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Delivery Group Status Summary</label>
    <referenceTo>KimbleOne__DeliveryGroupStatusSummary__c</referenceTo>
    <relationshipLabel>Delivery Engagements (Customer Delivery Group Status Summary)</relationshipLabel>
    <relationshipName>DeliveryEngagementsCustomer</relationshipName>
    <type>Lookup</type>
</CustomField>