force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__DeliveryGroupStatusSummary__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DeliveryGroupStatusSummary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Group Status Summary</label>
    <referenceTo>KimbleOne__DeliveryGroupStatusSummary__c</referenceTo>
    <relationshipLabel>Delivery Engagements</relationshipLabel>
    <relationshipName>DeliveryEngagements</relationshipName>
    <type>Lookup</type>
</CustomField>