force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__DeliveryProgram__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DeliveryProgram__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Program</label>
    <referenceTo>KimbleOne__DeliveryProgram__c</referenceTo>
    <relationshipLabel>Delivery Engagements</relationshipLabel>
    <relationshipName>DeliveryEngagements</relationshipName>
    <type>Lookup</type>
</CustomField>