force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__DeliveryStatus__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DeliveryStatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Delivery Status</label>
    <referenceTo>KimbleOne__DeliveryStatus__c</referenceTo>
    <relationshipLabel>Delivery Engagements</relationshipLabel>
    <relationshipName>DeliveryGroups</relationshipName>
    <type>Lookup</type>
</CustomField>