force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__ExpectedCcyExpectedContractRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpectedCcyExpectedContractRevenue__c</fullName>
    <label>Z_Obsolete - Contract Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>