force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__ExpectedCurrencyISOCode__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpectedCurrencyISOCode__c</fullName>
    <label>Z_Obsolete - Expected Currency ISO Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>