force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__ExpectedEndDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpectedEndDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>