force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__ExpectedStartDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpectedStartDate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>