force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__ExpensesContractMargin__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpensesContractMargin__c</fullName>
    <formula>IF ( NOT( ISBLANK(KimbleOne__ExpensesContractCost__c)  || ISBLANK(KimbleOne__ExpensesContractRevenue__c)  || KimbleOne__ExpensesContractRevenue__c = 0 ), ( KimbleOne__ExpensesContractRevenue__c  -  KimbleOne__ExpensesContractCost__c )  / KimbleOne__ExpensesContractRevenue__c,  NULL )</formula>
    <label>Expenses Contract Margin Pct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>