force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__ExpensesContractMarginAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpensesContractMarginAmount__c</fullName>
    <formula>IF ( NOT( ISBLANK(KimbleOne__ExpensesContractCost__c)  || ISBLANK(KimbleOne__ExpensesContractRevenue__c) ), KimbleOne__ExpensesContractRevenue__c - KimbleOne__ExpensesContractCost__c, NULL )</formula>
    <label>Expenses Contract Margin Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>