force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__ExpensesSupplierInvoiceableAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ExpensesSupplierInvoiceableAmount__c</fullName>
    <label>Expenses Supplier Invoiceable Amount</label>
    <summarizedField>KimbleOne__DeliveryElement__c.KimbleOne__ExpensesSupplierInvoiceableAmount__c</summarizedField>
    <summaryForeignKey>KimbleOne__DeliveryElement__c.KimbleOne__DeliveryGroup__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>