force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__ForecastAtThisLevel__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastAtThisLevel__c</fullName>
    <formula>IF(KimbleOne__Proposal__r.KimbleOne__ForecastAtDetailedLevel__c, &apos;N&apos;, &apos;Y&apos;)</formula>
    <label>ForecastAtThisLevel</label>
    <type>Text</type>
</CustomField>