force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__ForecastStatus__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ForecastStatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Forecast Status</label>
    <referenceTo>KimbleOne__ForecastStatus__c</referenceTo>
    <relationshipLabel>Delivery Engagements</relationshipLabel>
    <relationshipName>DeliveryGroups</relationshipName>
    <type>Lookup</type>
</CustomField>