force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__InvoicingCcyServicesInvoiceableAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCcyServicesInvoiceableAmount__c</fullName>
    <label>Services Invoiceable Amount</label>
    <summarizedField>KimbleOne__DeliveryElement__c.KimbleOne__InvoicingCcyServicesInvoiceableAmount__c</summarizedField>
    <summaryForeignKey>KimbleOne__DeliveryElement__c.KimbleOne__DeliveryGroup__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>