force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__InvoicingCurrencyContractRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicingCurrencyContractRevenue__c</fullName>
    <label>Invoicing Currency Contract Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>