force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__IsExpectedStartDateBeforeCloseDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__IsExpectedStartDateBeforeCloseDate__c</fullName>
    <formula>IF( KimbleOne__Proposal__r.KimbleOne__AcceptanceDate__c  &gt;  KimbleOne__ExpectedStartDate__c , &apos;Y&apos;, &apos;N&apos;)</formula>
    <label>Z_Obsolete - Start Before Close Date</label>
    <type>Text</type>
</CustomField>