force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__LostReason__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__LostReason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>No budget</fullName>
            </value>
            <value>
                <fullName>Decision postponed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>