force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__LostReasonNarrative__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__LostReasonNarrative__c</fullName>
    <label>Narrative</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>