force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__ProbabilityCodeEnum__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ProbabilityCodeEnum__c</fullName>
    <formula>KimbleOne__ForecastStatus__r.KimbleOne__ProbabilityCode__r.KimbleOne__Enum__c</formula>
    <label>Probability Code Enum</label>
    <type>Text</type>
</CustomField>