force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__ProductGroup__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ProductGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Group</label>
    <referenceTo>KimbleOne__ProductGroup__c</referenceTo>
    <relationshipName>DeliveryGroups</relationshipName>
    <type>Lookup</type>
</CustomField>