force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__ProposalItemsCostTotal__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ProposalItemsCostTotal__c</fullName>
    <label>Proposal Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>