force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__ProposalItemsMargin__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ProposalItemsMargin__c</fullName>
    <formula>IF ( NOT( ISBLANK(KimbleOne__ContractRevenue__c) || KimbleOne__ContractRevenue__c = 0 ), KimbleOne__ProposalItemsMarginAmount__c / KimbleOne__ContractRevenue__c, NULL )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposal Margin Pct</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>