force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__ProposalItemsMarginAmount__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ProposalItemsMarginAmount__c</fullName>
    <formula>KimbleOne__ContractMarginAmount__c - KimbleOne__ProposalItemsCostTotal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Proposal Margin Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>