force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__Reference__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Reference__c</fullName>
    <label>Reference</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>