force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__RiskLevel__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__RiskLevel__c</fullName>
    <label>Risk Level</label>
    <length>80</length>
    <type>Text</type>
</CustomField>