force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__ServicesContractRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ServicesContractRevenue__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Services Contract Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>