force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__StatusSummaryTemplateExternal__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__StatusSummaryTemplateExternal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Status Summary Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__StatusSummaryTemplate__c.KimbleOne__SharedWithCustomer__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>KimbleOne__StatusSummaryTemplate__c.KimbleOne__ContextType__r.KimbleOne__Enum__c</field>
            <operation>equals</operation>
            <value>DeliveryGroup</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__StatusSummaryTemplate__c</referenceTo>
    <relationshipLabel>Delivery Engagements</relationshipLabel>
    <relationshipName>DeliveryEngagementsSummaryTemplateExt</relationshipName>
    <type>Lookup</type>
</CustomField>