force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__WeightedContractRevenue__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__WeightedContractRevenue__c</fullName>
    <formula>KimbleOne__ForecastStatus__r.KimbleOne__Probability__c  *  KimbleOne__ContractRevenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weighted Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>