force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__WhatIfDifference__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__WhatIfDifference__c</fullName>
    <label>What If Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>