force-app/main/default/objects/KimbleOne__DeliveryGroup__c/fields/KimbleOne__WhatIfScenario__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__WhatIfScenario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>What If Scenario</label>
    <referenceTo>KimbleOne__WhatIfScenario__c</referenceTo>
    <relationshipLabel>Delivery Engagements</relationshipLabel>
    <relationshipName>DeliveryEngagements</relationshipName>
    <type>Lookup</type>
</CustomField>