force-app/main/default/objects/KimbleOne__DeliveryGroup__c/validationRules/KimbleOne__EndDateAfterStartDate.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__EndDateAfterStartDate</fullName>
    <active>false</active>
    <description>End Date must be on or after Start Date</description>
    <errorConditionFormula>KimbleOne__ExpectedStartDate__c  &gt;  KimbleOne__ExpectedEndDate__c</errorConditionFormula>
    <errorMessage>Expected End Date must be on or after Expected Start Date</errorMessage>
</ValidationRule>