force-app/main/default/objects/KimbleOne__DeliveryGroup__c/validationRules/KimbleOne__StartDateAfterCloseDate.validationRule-meta.xml
<ValidationRule>
    <fullName>KimbleOne__StartDateAfterCloseDate</fullName>
    <active>false</active>
    <description>Obsolete validation on Delivery Group Start Date vs Sales Opportunity Close Date.</description>
    <errorConditionFormula>False</errorConditionFormula>
    <errorMessage>Start Date cannot be before Expected Close Date</errorMessage>
</ValidationRule>