force-app/main/default/objects/KimbleOne__DeliveryGroup__c/listViews/KimbleOne__All.listView-meta.xml
<ListView>
    <fullName>KimbleOne__All</fullName>
    <columns>NAME</columns>
    <columns>KimbleOne__Account__c</columns>
    <columns>KimbleOne__Proposal__c</columns>
    <columns>KimbleOne__ForecastStatus__c</columns>
    <columns>KimbleOne__InvoicingCurrencyIsoCode__c</columns>
    <columns>KimbleOne__InvoicingCurrencyContractRevenue__c</columns>
    <columns>KimbleOne__ContractRevenue__c</columns>
    <columns>KimbleOne__ContractCost__c</columns>
    <columns>KimbleOne__ForecastAtThisLevel__c</columns>
    <columns>KimbleOne__DeliveryStage__c</columns>
    <columns>KimbleOne__DeliveryProgram__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>