force-app/main/default/objects/KimbleOne__DeliveryGroup__c/listViews/KimbleOne__InvoiceableDeliveryGroups.listView-meta.xml
<ListView>
    <fullName>KimbleOne__InvoiceableDeliveryGroups</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>KimbleOne__Account__c</columns>
    <columns>NAME</columns>
    <columns>KimbleOne__Reference__c</columns>
    <columns>KimbleOne__InvoicingCcyServicesInvoiceableAmount__c</columns>
    <columns>KimbleOne__InvoicingCcyExpensesInvoiceableAmount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>KimbleOne__InvoicingCcyServicesInvoiceableAmount__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>KimbleOne__InvoicingCcyExpensesInvoiceableAmount__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Engagements with Items for Invoicing</label>
    <language>en_US</language>
</ListView>