force-app/main/default/objects/KimbleOne__DeliveryGroup__c/listViews/KimbleOne__SupplierInvoiceableDeliveryGroups.listView-meta.xml
<ListView>
    <fullName>KimbleOne__SupplierInvoiceableDeliveryGroups</fullName>
    <columns>KimbleOne__Account__c</columns>
    <columns>NAME</columns>
    <columns>KimbleOne__Reference__c</columns>
    <columns>KimbleOne__ServicesSupplierInvoiceableAmount__c</columns>
    <columns>KimbleOne__ExpensesSupplierInvoiceableAmount__c</columns>
    <filterScope>Everything</filterScope>
    <label>Engagements for Supplier Invoicing</label>
    <language>en_US</language>
</ListView>